[gd_scene load_steps=9 format=3 uid="uid://sxwm712fxj0e"]

[ext_resource type="Script" path="res://scripts/world_select.gd" id="1_vvqx2"]
[ext_resource type="PackedScene" uid="uid://c8lj4bah1i8a0" path="res://scenes/cyber_security.tscn" id="2_rxjkf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7bsfj"]

[sub_resource type="LabelSettings" id="LabelSettings_p80hi"]
font_size = 46

[sub_resource type="LabelSettings" id="LabelSettings_70giw"]
font_size = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5d7ma"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jg4w7"]
bg_color = Color(0.76, 0.76, 0.722, 0.168627)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu5lv"]
bg_color = Color(0.351929, 0.606554, 0.937459, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vvqx2")
cyber_security_scene = ExtResource("2_rxjkf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 76

[node name="TitleHContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 34

[node name="BackBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TitleHContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/TitleHContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_7bsfj")

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleHContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 3.6
text = "World Statistics
"
label_settings = SubResource("LabelSettings_p80hi")

[node name="WorldHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 55

[node name="AI" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/WorldHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Artificial Intelligence
"

[node name="CyberSecurity" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/WorldHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cyber Security"

[node name="DataAnalytics" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/WorldHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Data Analytics
"

[node name="MetricHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MetricHBox"]
layout_mode = 2
text = "Game Completion"
label_settings = SubResource("LabelSettings_70giw")

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MetricHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_5d7ma")

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/MetricHBox"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 7.04
theme_override_styles/background = SubResource("StyleBoxFlat_jg4w7")
theme_override_styles/fill = SubResource("StyleBoxFlat_fu5lv")
value = 50.0
show_percentage = false

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MetricHBox"]
layout_mode = 2
text = "50%"
label_settings = SubResource("LabelSettings_70giw")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TitleHContainer/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/WorldHBox/AI" to="." method="_on_ai_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/WorldHBox/CyberSecurity" to="." method="_on_cyber_security_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/WorldHBox/DataAnalytics" to="." method="_on_data_analytics_pressed"]
